--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "js-build": "cp ./node_modules/medium-editor/dist/js/medium-editor.min.js ./js/bundle/medium-editor.min.js && cp ./node_modules/tw-elements/dist/js/tw-elements.umd.min.js ./js/bundle/tw-elements.umd.min.js && esbuild js/index.jsx --bundle --outfile=js/bundle/app.js",
+    "js-build": "cp ./node_modules/medium-editor/dist/js/medium-editor.min.js ./js/bundle/medium-editor.min.js && cp ./node_modules/tw-elements/dist/js/tw-elements.umd.min.js ./js/bundle/tw-elements.umd.min.js && esbuild js/index.jsx --bundle --minify --outfile=js/bundle/app.js",
     "css-build": "esbuild css/index.css --bundle --minify --outfile=css/bundle/app.css",
     "tw-build": "npx tailwindcss -i ./css/tw/in.css -o ./css/tw/out.css",
     "tw": "npx tailwindcss -i ./css/tw/in.css -o ./css/tw/out.css --watch",
