--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "tw-build": "npx tailwindcss -i ./css/tw/in.css -o ./css/tw/out.css",
     "text-build": "find -name text.po | xargs msgcat > ext/data/.i18n/bundle.po",
     "tw": "npx tailwindcss -i ./css/tw/in.css -o ./css/tw/out.css --watch",
-    "build": "npm run tw-build && npm run css-build && npm run js-build && npm run text-build"
+    "build": "npm run init && npm run tw-build && npm run css-build && npm run js-build && npm run text-build",
+    "init": "mkdir -p ./ext/data/.i18n && cp -u ./core/modules/install/uri/install/tailwind.theme.js ./ext/tailwind.theme.js && touch ./ext/theme.css"
   },
   "repository": {
     "type": "git",
