Fix Mac and Docker image

--- a/docker/docker-nimbly/Dockerfile
+++ b/docker/docker-nimbly/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:latest
+FROM ubuntu:latest 
+
+RUN userdel -r ubuntu
 
 # Install required software and modules
 ENV DEBIAN_FRONTEND noninteractive
