--- a/docker/docker-nimbly-openshift/php.ini
+++ b/docker/docker-nimbly-openshift/php.ini
@@ -121,7 +121,7 @@ bcmath.scale = 0
 
 [Session]
 session.save_handler = files
-session.save_path = /tmp/sessions
+session.save_path = /opt/app-root/src/ext/data/.tmp/sessions
 session.use_strict_mode = 0
 session.use_cookies = 1
 session.cookie_secure = 0
