--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Nimbly Web App Framework",
   "main": "index.php",
+  "type": "module",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
     "js-build": "cp ./node_modules/medium-editor/dist/js/medium-editor.min.js ext/static/medium-editor.min.js && cp ./node_modules/tw-elements/dist/js/tw-elements.umd.min.js ext/static/tw-elements.umd.min.js && esbuild js/index.jsx --bundle --minify --outfile=ext/static/app.js",
     "css-build": "cp ./node_modules/medium-editor/dist/css/medium-editor.min.css ./css/medium-editor.min.css && esbuild css/index.css --bundle --minify --external:img/* --external:font/* --outfile=ext/static/app.css",
-    "tw-build": "npx tailwindcss -c tailwind.config.cjs -i ./css/tw/in.css -o ./css/tw/out.css",
+    "tw-build": "tailwindcss -i ./css/tw/in.css -o ./css/tw/out.css",
     "text-build": "find -name text.po | xargs msgcat > ext/data/.i18n/text.base.po",
     "tw": "npx tailwindcss -i ./css/tw/in.css -o ./css/tw/out.css --watch",
     "build": "npm run tw-build && npm run css-build && npm run js-build && npm run text-build",
@@ -35,6 +36,6 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "esbuild": "^0.25.4",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.7"
   }
 }
