--- a/misc/docker-nimbly/Dockerfile
+++ b/misc/docker-nimbly/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:latest
 
+RUN userdel -r ubuntu
+
 # Install required software and modules
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get -y update 
